<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2搜车</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buy_car_text">我要买车</string>
    <string name="sell_car_text">我要卖车</string>
    <string name="txt_user_login_str">用户名</string>
    <string name="txt_pwd">密码</string>
    <string name="btn_login_text">登录</string>
    <string name="chk_save_user_name_text">保存用户名</string>
    <string name="txt_register">注册</string>
    <string name="txt_forgot_pwd">找回密码</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_old_password">旧密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="hint_new_password_confirm">确认新密码</string>
    <string name="txt_register_phone">注册手机号码</string>
    <string name="btn_get_validate_code_text">免费获取验证码</string>
    <string name="txt_validate_code">手机验证码</string>
    <string name="txt_confirm_pwd">确认密码</string>
    <string name="chk_confirm_condition">我已经阅读并同意XX条款</string>
    <string name="txt_dealer_name">经销商名称</string>
    <string name="txt_dealer_addr">经销商地址</string>
    <string name="tbtn_used_car_company">二手车经纪公司</string>
    <string name="rbtn_4s_store">4S店</string>
    <string name="tab_user_register">用户注册</string>
    <string name="tab_dealer_register">经销商注册</string>
    <string name="txt_loading_str">加载中…</string>
    <string name="txt_no_more_data">没有更多数据</string>
    <string name="btn_my_profile_text">我的资料</string>
    <string name="btn_identification_text">身份认证</string>
    <string name="btn_car_selling_text">账户资金</string>
    <string name="btn_my_favorate_text">我的收藏</string>
    <string name="btn_records_for_buy_car_text">买卖记录</string>
    <string name="title_personal_center">个人中心</string>
    <string name="tab_find_pwd_by_phone">手机找回</string>
    <string name="tab_find_pwd_by_email">邮箱找回</string>
    <string name="txt_shopping_car_str">购物车</string>
    <string name="menu_shopping_car_str">购物车</string>
    <string name="menu_shopping_add">添加</string>
    <string name="menu_shopping_edit">编辑</string>
    <string name="error_input_account">请输入手机号</string>
    <string name="error_input_password">请输入密码</string>
    <string name="error_input_confirm_password">请输入确认密码</string>
    <string name="error_input_verify_code">请输入短信验证码</string>
    <string name="error_input_agreement">同意并勾选服务条款"</string>
    <string name="error_input_reseller_name">请输入经销商名车</string>
    <string name="error_input_reseller_address">请输入经销商地址</string>
    <string name="error_password_length">密码长度限制在%1$d-%2$d位</string>
    <string name="error_password_not_equal">两次输入的密码不相同</string>
    <string name="error_verify_code_incorrect">验证码不正确</string>
    <string name="notice_obtain_code_multiple">请不要重复获取短信验证码</string>
    <string name="sale_car_name">商品名称: %1$s</string>
    <string name="sale_car_pre_sale_price">预售价格: %1$s</string>
    <string name="sale_car_mileage">行驶里程: %1$s</string>
    <string name="sale_car_buy_time">首次购买时间: %1$s</string>
    <string name="sale_car_filter">搜索</string>
    <!-- Change password -->
    <string name="change_password_bind_phone">绑定手机:  %1$s</string>

    <!-- History -->
    <string name="activity_history_car_bought">买车记录</string>
    <string name="activity_history_car_sold">卖车记录</string>

    <!-- History list item -->
    <string name="history_car_info">预售价格: %1$s万   行驶里程: %2$s万公里   首次购买时间: %3$s</string>
    <string name="history_order_number">订单号: %1$s</string>
    <string name="history_order_price">订单金额: %1$s元</string>
    <string name="history_order_pay_time">下单日期: %1$s</string>
    <string name="history_order_state">订单状态: %1$s</string>
    <string name="version">检查更新  当前版本号:%s</string>
    <string name="txt_brands">品牌:</string>
    <string name="drop_down_list_header_default_text">Click to refresh…</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh…</string>
    <string name="drop_down_list_header_release_text">Release to refresh…</string>
    <string name="drop_down_list_header_loading_text">Loading…</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading…</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>

    <string name="order_state">订单状态：%1$s</string>
    <string name="order_number">订单号：%1$s</string>
    <string name="order_amount">订单金额：%1$s</string>
    <string name="order_date">下单日期：%1$s</string>
    <string name="car_vin">车辆识别码/VIN：%1$s</string>
    <string name="loan_amount">贷款金额：%1$s</string>
    <string name="product_price">商品价格：%1$s</string>
    <string name="trade_fee">交易服务费：%1$s</string>
    <string name="seller_name">卖家信息：%1$s</string>
    <string name="seller_id">身份证：%s</string>
    <string name="order_base_info">贷款金额：%1$s 商品价格：%2$s 交易服务费：%3$s</string>

    <string name="str1">
        <![CDATA[
        <b>车价</b>\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>申请贷款服务费用</b><br/>
        车价&lt;=20万\t\t\t\t\t\t\t\t\t\t\t\t499<br/>
        20万&lt;车价&lt;=50万\t\t\t\t\t\t999<br/>
        50万&lt;车价&lt;=100万\t\t\t\t\t1499<br/>
        100万&lt;车价\t\t\t\t\t\t\t\t\t\t\t\t1999
        ]]>
    </string>
    <string-array name="bank_list">
        <item>"东亚银行"</item>
        <item>"工商银行"</item>
        <item>"农业银行"</item>
        <item>"中国银行"</item>
        <item>"建设银行"</item>
        <item>"交通银行"</item>
        <item>"中信银行"</item>
        <item>"光大银行"</item>
        <item>"民生银行"</item>
        <item>"广分银行"</item>
        <item>"平安银行"</item>
        <item>"招商银行"</item>
        <item>"兴业银行"</item>
        <item>"浦发银行"</item>
        <item>"北京银行"</item>
        <item>"南京银行"</item>
        <item>"宁波银行"</item>
        <item>"上海农村商业务银行"</item>
        <item>"邮政银行"</item>
    </string-array>
    <string-array name="bank_type_list">
        <item>借记卡</item>
        <item>贷记卡</item>
    </string-array>
    <string-array name="id_type_list">
        <item>身份证</item>
        <item>护照</item>
        <item>军人证</item>
    </string-array>

    <integer-array name="open_province">
        <item>28</item>
    </integer-array>
    <integer-array name="open_city">
        <item>225</item>
    </integer-array>

    <string name="title_activity_history_activity2">HistoryActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="history_order">买车记录</string>
    <string name="history_sale">卖车记录</string>

    <string name="error">出错了^.^</string>
</resources>
