<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dip"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:background="@color/white"
            android:orientation="vertical">
        <TextView
                android:id="@+id/change_password_text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FD7509"
                android:textSize="18sp"
                tools:text="@string/change_password_bind_phone"/>
        <com.jason.usedcar.view.VerifyCodeView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"/>
        <EditText
                style="@style/EditText"
                android:id="@+id/change_password_edit_old_password"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:inputType="textVisiblePassword"
                android:hint="@string/hint_old_password"/>
        <EditText
                style="@style/EditText"
                android:id="@+id/change_password_edit_new_password"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:inputType="textVisiblePassword"
                android:hint="@string/hint_new_password"/>
        <EditText
                style="@style/EditText"
                android:id="@+id/change_password_edit_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_marginTop="5dip"
                android:inputType="textVisiblePassword"
                android:hint="@string/hint_new_password_confirm"/>
        <Button
                style="@style/Confirm.Button"
                android:id="@+id/change_password_btn_ok"
                android:layout_marginTop="5dp"/>
    </LinearLayout>
</ScrollView>
