<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:support="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
    <android.support.v7.internal.widget.LinearLayoutICS
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:background="@drawable/rect_bg"
            android:orientation="vertical"
            support:divider="@drawable/divider_h"
            support:dividerPadding="10dip"
            support:showDividers="middle">
        <EditText
                style="@style/register.edit"
                android:id="@+id/register_reseller_name"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:hint="@string/txt_dealer_name"/>
        <EditText
                style="@style/register.edit"
                android:id="@+id/register_reseller_address"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:hint="@string/txt_dealer_addr"/>
    </android.support.v7.internal.widget.LinearLayoutICS>
    <RadioGroup
            android:id="@+id/register_reseller_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/register_used_car_company"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:button="@null"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="4dip"
                android:checked="true"
                android:text="@string/tbtn_used_car_company"
                android:textColor="#333333"/>
        <RadioButton
                android:id="@+id/register_4s_shop"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="20dip"
                android:button="@null"
                android:drawableLeft="@drawable/radio"
                android:drawablePadding="4dip"
                android:text="@string/rbtn_4s_store"
                android:textColor="#333333"/>
    </RadioGroup>
</LinearLayout>
