<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:descendantFocusability="afterDescendants"
        android:padding="6dip">
    <ImageView
            android:id="@+id/car_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pic" />
    <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="6dip"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >
        <TextView
                android:id="@+id/pre_sale_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_car_pre_sale_price" />
        <TextView
                android:id="@+id/mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dip"
                android:paddingBottom="2dip"
                android:text="@string/sale_car_mileage" />
        <TextView
                android:id="@+id/buy_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_car_buy_time" />
    </LinearLayout>
    <TextView
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Button" />
</LinearLayout>
