<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dip"
        android:paddingRight="40dip"
        android:background="@color/white">
    <LinearLayout
            style="@style/rectangle.vertical"
            android:id="@+id/login_account_base"
            android:layout_centerInParent="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white">
            <ImageView
                    style="@style/register.icon"
                    android:src="@drawable/avatar_icon"/>
            <View
                    style="@style/Divider"
                    android:layout_height="16dip"
                    android:layout_gravity="center_vertical"/>
            <EditText
                    style="@style/register.account"
                    android:id="@+id/login_account"/>
        </LinearLayout>
        <View
                style="@style/Divider.Horizontal"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">
            <ImageView
                    style="@style/register.icon"
                    android:src="@drawable/password_icon"/>
            <View
                    style="@style/Divider"
                    android:layout_height="16dip"
                    android:layout_gravity="center_vertical"/>
            <EditText
                    style="@style/register.password"
                    android:id="@+id/login_password"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_above="@id/login_account_base"
            android:layout_centerHorizontal="true"
            android:src="@drawable/used_car_logo"/>
    <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/chk_save_user_name_text"/>
    <Button
            style="@style/register.button"
            android:id="@+id/login_login"
            android:layout_below="@id/login_account_base"
            android:layout_marginTop="20dip"
            android:onClick="onClick"
            android:text="@string/btn_login_text"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dip"
            android:layout_centerHorizontal="true">
        <Button
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:onClick="onClick"
                android:padding="10dip"
                android:text="@string/txt_register"/>
        <View
                style="@style/Divider"
                android:layout_height="16dip"
                android:layout_gravity="center_vertical"/>
        <Button
                android:id="@+id/login_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:onClick="onClick"
                android:padding="10dip"
                android:text="@string/txt_forgot_pwd"/>
    </LinearLayout>
</RelativeLayout>
